--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -5,7 +5,7 @@
 
     margin: 15px;
 
-    border-radius: 5px;
+    border-radius: 15%;
 
     transition: 0.3s all;
     overflow: hidden;
@@ -31,7 +31,7 @@
         z-index: 2;
 
         width: 100%;
-        height: 100%;
+        height: 10%;
 
         transition: 0.3s ease-in-out;
 
@@ -73,6 +73,11 @@
         align-items: center;
 
         border: 1px solid #ccc;
+        background-color: #10a37f;
+
+        font-size: 16px;
+        color: #fff;
+
         border-radius: 5px;
 
         z-index: 3;
@@ -82,10 +87,11 @@
 
 
         padding: 15px;
-        margin: 10px;
+        margin: 20px 10px;
 
         &:hover {
-            background-color: #ccc;
+            // background-color: #ccc;
+            box-shadow: inset 0 0 0 150px rgb(0 0 0 / 10%);
         }
     }
 
