--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -1,8 +1,10 @@
-@import "error.scss", "page.scss";
+// @import "error.scss";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji !important;
     font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
@@ -15,4 +17,11 @@ button {
     background-color: transparent;
     border: none;
     cursor: pointer;
+    font-weight: 700 !important;
+}
+
+h1,
+h2,
+h3 {
+    font-weight: 800;
 }
