--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -2,10 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
-    margin: 15px;
-
-    border-radius: 15%;
 
     transition: 0.3s all;
     overflow: hidden;
@@ -13,8 +11,11 @@
     cursor: pointer;
     position: relative;
 
-    height: 480px;
-    width: 640px;
+    height: 100vh;
+    width: 100%;
+
+    max-height: 480px;
+    max-width: 640px;
 
     .faceid_message {
         display: none;
@@ -42,8 +43,12 @@
     video,
     canvas {
         position: absolute;
+
         width: 100%;
-        height: 100%;
+
+        max-height: 480px;
+        max-width: 640px;
+
         top: 0;
         left: 0;
         z-index: 1;
@@ -67,32 +72,32 @@
     }
 
 
-    button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    // button {
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
 
-        border: 1px solid #ccc;
-        background-color: #10a37f;
+    //     border: 1px solid #ccc;
+    //     background-color: #10a37f;
 
-        font-size: 16px;
-        color: #fff;
+    //     font-size: 16px;
+    //     color: #fff;
 
-        border-radius: 5px;
+    //     border-radius: 5px;
 
-        z-index: 3;
+    //     z-index: 3;
 
-        transition: 0.3s all;
-        width: 50%;
+    //     transition: 0.3s all;
+    //     width: 50%;
 
 
-        padding: 15px;
-        margin: 20px 10px;
+    //     padding: 15px;
+    //     margin: 20px 10px;
 
-        &:hover {
-            // background-color: #ccc;
-            box-shadow: inset 0 0 0 150px rgb(0 0 0 / 10%);
-        }
-    }
+    //     &:hover {
+    //         // background-color: #ccc;
+    //         box-shadow: inset 0 0 0 150px rgb(0 0 0 / 10%);
+    //     }
+    // }
 
 }
