--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -56,6 +56,13 @@
 
     canvas {
         opacity: 0.8;
+
+        @media not all and (min-resolution:.001dpcm) {
+            // iOS Safari specific styles
+            width: 100vw;
+            max-height: calc(480px * 2);
+            max-width: calc(640px * 2);
+        }
     }
 
     .message_active {
@@ -70,34 +77,5 @@
     p {
         margin: 5px 15px;
     }
-
-
-    // button {
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-
-    //     border: 1px solid #ccc;
-    //     background-color: #10a37f;
-
-    //     font-size: 16px;
-    //     color: #fff;
-
-    //     border-radius: 5px;
-
-    //     z-index: 3;
-
-    //     transition: 0.3s all;
-    //     width: 50%;
-
-
-    //     padding: 15px;
-    //     margin: 20px 10px;
-
-    //     &:hover {
-    //         // background-color: #ccc;
-    //         box-shadow: inset 0 0 0 150px rgb(0 0 0 / 10%);
-    //     }
-    // }
 
 }
