--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -57,11 +57,13 @@
     canvas {
         opacity: 0.8;
 
+
         @media not all and (min-resolution:.001dpcm) {
             // iOS Safari specific styles
             width: 100vw;
             max-height: calc(480px * 2);
             max-width: calc(640px * 2);
+            height: 100% !important;
         }
     }
 
