--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -55,9 +55,13 @@
     }
 
     canvas {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         opacity: 0.8;
 
-
+        right: 0;
+        bottom: 0;
 
     }
 
