--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -66,9 +66,8 @@
         @media (max-width: 480px) {
             canvas {
                 opacity: 0.8;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
+                height: 100% !important;
+                align-items: center;
             }
         }
 
