--- a/src/components/UI/Page/Page.module.scss
+++ b/src/components/UI/Page/Page.module.scss
@@ -1,8 +1,11 @@
 .page {
     display: flex !important;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+
+    background-color: #eff2ff;
+
 
     overflow: hidden;
 
