--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -31,6 +31,8 @@
         left: 0;
         z-index: 2;
 
+        border-radius: 6px 6px 0 0;
+
         width: 100%;
         height: 10%;
 
@@ -43,6 +45,9 @@
     video,
     canvas {
         position: absolute;
+
+        border-radius: 6px;
+        overflow: hidden;
 
         width: 100%;
 
