--- a/src/components/UI/Div/Div.module.scss
+++ b/src/components/UI/Div/Div.module.scss
@@ -6,8 +6,11 @@
 
 
     transition: 0.3s all !important;
-    margin-top: 5%;
     width: 65%;
+
+    p {
+        margin-top: 5%;
+    }
 
     @media (min-width: 150px) and (max-width: 480px) {
         & {
@@ -17,7 +20,7 @@
 
     @media (min-width: 481px) and (max-width: 1024px) {
         & {
-            width: 80%;
+            width: 90%;
         }
     }
 
