--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -80,6 +80,10 @@
         transition: 0.3s all !important;
     }
 
+    canvas {
+        max-height: 900px !important;
+    }
+
     .webcamInactive {
         border-radius: 100%;
     }
