--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -1,26 +1,10 @@
-.faceid_init {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    p {
-        margin-top: 30px;
-    }
-
-    video {
-        display: flex;
-        height: 240px;
-        width: 320px;
-        border-radius: 100%;
-    }
-}
-
 .faceid {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    overflow: hidden;
 
     cursor: pointer;
     position: relative;
@@ -83,7 +67,6 @@
 
         @media (min-width: 150px) and (max-width: 480px) {
             & {
-                border: 5px solid red;
                 height: calc(2 * 480px) !important;
             }
         }
