--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -20,7 +20,15 @@
 
     min-height: 100vh;
 
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: linear-gradient(-45deg, #ffffff, #28a6e9, #000000);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 20s ease infinite;
+
+
+    @media (min-width: 150px) and (max-width: 480px) {
+        & {
+            background: #fff;
+            animation: none;
+        }
+    }
 }
