--- a/src/components/CardID/CardID.module.scss
+++ b/src/components/CardID/CardID.module.scss
@@ -5,6 +5,12 @@
 
     width: 80%;
 
+    @media (min-width: 150px) and (max-width: 480px) {
+        & {
+            width: 90%;
+        }
+    }
+
     svg {
         display: flex;
         justify-content: center;
@@ -12,10 +18,16 @@
         text-align: center;
 
 
-        padding: 5%;
-        background-color: #fff;
-        border-radius: 10px;
 
-        margin-bottom: 3%;
+        margin: 0;
+        padding: 0;
+        padding-top: 7%;
+        padding-bottom: 7%;
+        background-color: #fff;
+        border-radius: 4px;
+
+        width: 100%;
+
+        border: 1px solid #ccc;
     }
 }
