--- a/src/components/PanelID/PanelID.module.scss
+++ b/src/components/PanelID/PanelID.module.scss
@@ -11,9 +11,23 @@
     //     border-radius: 10px;
     // }
 
+    @media (min-width: 150px) and (max-width: 480px) {
+        & {
+            width: 90%;
+        }
+    }
+
     .profileid {
         display: flex;
         justify-content: center;
         flex-direction: row;
+        overflow: hidden;
+
+        @media (min-width: 150px) and (max-width: 480px) {
+            & {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
     }
 }
