--- a/src/components/UI/Group/ButtonGroup.module.scss
+++ b/src/components/UI/Group/ButtonGroup.module.scss
@@ -8,6 +8,16 @@
         margin: 1% !important;
     }
 
+    @media (min-width: 150px) and (max-width: 480px) {
+        & {
+            &>* {
+                width: 50% !important;
+                margin: 0;
+                padding: 20px 0 !important;
+            }
+        }
+    }
+
     // &>*:first-child {
     //     margin-right: 2% !important;
     // }
