--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -12,8 +12,18 @@
     padding: 10px;
     margin: 10px;
 
+    transition: 0.3s all;
+
     img {
         display: flex;
         height: 60px;
+        border-radius: 4px;
+        overflow: hidden;
+    }
+
+    @media (min-width: 150px) and (max-width: 480px) {
+        & {
+            display: none !important;
+        }
     }
 }
