--- a/src/components/UI/Page/Page.module.scss
+++ b/src/components/UI/Page/Page.module.scss
@@ -5,15 +5,24 @@
     align-items: center;
 
     background-color: #eff2ff;
-    border-radius: 10px;
-
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+    border-radius: 4px;
 
     margin-top: 2%;
     margin-bottom: 2%;
     padding: 3%;
+
+    border: 1px solid #eee;
+
+    @media (min-width: 150px) and (max-width: 480px) {
+        & {
+            margin-top: 0%;
+            margin-bottom: 0%;
+            padding: 0 !important;
+            border-radius: 0;
+            min-height: 100vh !important;
+            justify-content: stretch;
+        }
+    }
 
     overflow: hidden;
 
