--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -9,7 +9,7 @@
     cursor: pointer;
     position: relative;
 
-    height: 100vh;
+    height: 60vh;
     width: 100%;
 
     max-height: 480px;
@@ -55,7 +55,7 @@
         max-height: 480px;
         max-width: 640px;
 
-        top: 0;
+        top: 10%;
         left: 0;
         z-index: 1;
 
