--- a/src/components/UI/Page/Page.module.scss
+++ b/src/components/UI/Page/Page.module.scss
@@ -20,7 +20,7 @@
             padding: 0 !important;
             border-radius: 0;
             min-height: 100vh !important;
-            justify-content: stretch;
+            justify-content: center;
         }
     }
 
