--- a/src/components/FaceID/FaceID.module.scss
+++ b/src/components/FaceID/FaceID.module.scss
@@ -55,7 +55,7 @@
         max-height: 480px;
         max-width: 640px;
 
-        top: 10%;
+        top: 0;
         left: 0;
         z-index: 1;
 
