--- a/src/components/UI/Page/Page.module.scss
+++ b/src/components/UI/Page/Page.module.scss
@@ -21,6 +21,8 @@
             border-radius: 0;
             min-height: 100vh !important;
             justify-content: center;
+            padding-top: 10% !important;
+            padding-bottom: 10% !important;
         }
     }
 
