--- a/src/components/UI/Form/Form.module.scss
+++ b/src/components/UI/Form/Form.module.scss
@@ -1,19 +1,8 @@
 .form {
+
+    display: flex;
+    flex-direction: column;
+
     transition: 0.3s all !important;
-    margin-top: 5%;
-    width: 65%;
-
-    @media (min-width: 150px) and (max-width: 480px) {
-        & {
-            width: 90%;
-        }
-    }
-
-    @media (min-width: 481px) and (max-width: 1024px) {
-        & {
-            width: 80%;
-        }
-    }
-
-
+    overflow: hidden !important;
 }
