--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -1,29 +1,56 @@
 .header {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
 
+    position: relative;
 
-    position: fixed;
-    top: 0;
-    left: 10px;
-    right: 0;
+}
 
-    padding: 10px;
-    margin: 10px;
+.appbar {
+    background-color: #080b16 !important;
+    box-shadow: none !important;
 
-    transition: 0.3s all;
-
-    img {
-        display: flex;
-        height: 60px;
-        border-radius: 4px;
-        overflow: hidden;
+    .sologo {
+        justify-content: center !important;
     }
 
-    @media (min-width: 150px) and (max-width: 480px) {
-        & {
-            display: none !important;
+    &>* {
+        display: flex !important;
+        justify-content: space-between !important;
+
+        a {
+            display: flex;
+            align-items: center;
+            margin: 7px;
+            font-size: 30px !important;
+            color: #fff;
+            font-weight: bold;
+
+            @media (min-width: 150px) and (max-width: 800px) {
+                & {
+                    font-size: 25px !important;
+                }
+
+                svg {
+                    margin-left: 5px;
+                    margin-right: 5px;
+                    font-size: 35px !important;
+                }
+            }
+
+            svg {
+                margin-left: 5px;
+                margin-right: 5px;
+                font-size: 40px !important;
+            }
+        }
+
+        button {
+            margin: 7px;
+
+            svg {
+                width: 40px !important;
+                height: auto;
+            }
         }
     }
 }
