--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -1,6 +1,12 @@
 .input {
     transition: 0.3s all;
 
-    background-color: #fff;
+    background-color: #1a1e2d !important;
+
+    border: 1px solid rgba(0, 0, 0, 0.12) !important;
+
+    border-radius: 4px !important;
+
+    color: #fff !important;
 
 }
