--- a/src/assets/styles/swal.scss
+++ b/src/assets/styles/swal.scss
@@ -7,7 +7,7 @@ div:where(.swal2-container) {
 }
 
 .swal2-modal {
-    background-color: #34396a !important;
+    background-color: #1a1e2d !important;
 
     h1,
     h2 {
