--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -33,15 +33,21 @@
         }
 
         ul {
-            background-image: linear-gradient(to bottom right, #1a1e2d) !important;
-            padding: 25px 0;
+            display: flex;
+            flex-direction: column;
+            padding: 0 !important;
+            background-image: linear-gradient(from top to bottom right, #1a1e2d) !important;
+
+            @media (min-width: 150px) and (max-width: 800px) {
+                flex-direction: column-reverse;
+            }
 
             li {
                 color: #fff;
 
                 @media (min-width: 150px) and (max-width: 800px) {
                     & {
-                        padding: 15px !important;
+                        padding: 7px !important;
                     }
                 }
 
@@ -51,7 +57,7 @@
 
                     @media (min-width: 150px) and (max-width: 800px) {
                         & {
-                            font-size: 30px !important;
+                            font-size: 22px !important;
                         }
                     }
                 }
@@ -62,7 +68,7 @@
 
                     @media (min-width: 150px) and (max-width: 800px) {
                         & {
-                            font-size: 40px !important;
+                            font-size: 30px !important;
                         }
                     }
                 }
