--- a/src/assets/styles/modal.scss
+++ b/src/assets/styles/modal.scss
@@ -13,6 +13,18 @@
         min-width: 30vw;
         color: #fff !important;
 
+        @media (min-width: 801px) and (max-width: 1200px) {
+            & {
+                min-width: 70vw;
+            }
+        }
+
+        @media (min-width: 150px) and (max-width: 800px) {
+            & {
+                min-width: 70vw;
+            }
+        }
+
         h2 {
             font-weight: bold;
         }
