--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -9,6 +9,15 @@
     background-color: #080b16 !important;
     box-shadow: none !important;
 
+    border: 1px solid rgba(0, 0, 0, 0.12) !important;
+
+    @media (min-width: 150px) and (max-width: 800px) {
+        & {
+            bottom: 0 !important;
+            top: auto !important;
+        }
+    }
+
     .sologo {
         justify-content: center !important;
     }
