--- a/src/components/UI/Content/Content.module.scss
+++ b/src/components/UI/Content/Content.module.scss
@@ -7,6 +7,10 @@
 
     background-color: #080b16;
     min-height: 100vh;
+
+    @media (min-width: 150px) and (max-width: 800px) {
+        min-height: 90vh;
+    }
 }
 
 .page {
