--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -2,10 +2,11 @@
     background-color: #1a1e2d !important;
     margin-top: 5% !important;
 
+    width: 100% auto;
 
     button {
         color: #fff !important;
-        font-size: 20px !important;
+        font-size: 1.2rem !important;
         font-weight: bold !important;
         text-transform: capitalize !important;
         padding: 15px 30px !important;
