--- a/src/assets/styles/modal.scss
+++ b/src/assets/styles/modal.scss
@@ -44,13 +44,15 @@
             color: #fff;
             font-weight: bold !important;
 
+            background-color: #7066e0 !important;
+
             svg {
                 margin-right: 5px;
                 margin-left: 5px;
             }
 
             &:hover {
-                background-color: #34396a !important;
+                background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) !important;
             }
         }
     }
