--- a/src/assets/styles/toggle.scss
+++ b/src/assets/styles/toggle.scss
@@ -5,7 +5,7 @@
     button {
         color: #fff !important;
 
-        font-size: 20px;
+        font-size: 1.2rem;
         font-weight: bold;
 
         text-transform: capitalize !important;
