--- a/src/components/UI/ProfileCard/ProfileCard.module.scss
+++ b/src/components/UI/ProfileCard/ProfileCard.module.scss
@@ -51,7 +51,8 @@
             font-weight: bold;
             text-transform: capitalize !important;
             padding: 15px 30px !important;
-            background-color: #7066e0 !important;
+            // background-color: #7066e0 !important;
+            background-color: #34396a !important;
 
             &:hover {
                 background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) !important;
