--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -2,7 +2,7 @@
     background-color: #1a1e2d !important;
     margin-top: 5% !important;
 
-    width: 100% auto;
+    width: 100% !important;
 
     button {
         color: #fff !important;
@@ -12,7 +12,8 @@
         padding: 15px 30px !important;
         width: 100% !important;
 
-        background-color: #7066e0 !important;
+        // background-color: #7066e0 !important;
+        background-color: #34396a !important;
 
         svg {
             margin-right: 5px !important;
