--- a/src/components/UI/FaceID/FaceID.module.scss
+++ b/src/components/UI/FaceID/FaceID.module.scss
@@ -66,12 +66,42 @@
         font-weight: bold;
         font-size: 1.5rem;
 
-        b {
-            background-color: #7066e0 !important;
+        b,
+        i {
+            background-color: rgba(52, 57, 106, 0.9);
+            font-style: normal !important;
             padding: 15px !important;
             border-radius: 4px;
             position: absolute;
             top: 10%;
+            transition: all .3s !important;
+            cursor: pointer;
+
+            &:hover {
+                background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) !important;
+            }
+        }
+
+        i {
+            position: static;
+        }
+
+        button {
+            background-color: rgba(52, 57, 106, 0.9);
+            border-radius: 4px !important;
+            border: 1px solid rgba(0, 0, 0, .12) !important;
+            color: #fff !important;
+            font-size: 1.2rem !important;
+            font-weight: 700 !important;
+            padding: 15px 30px !important;
+            text-transform: capitalize !important;
+            transition: all .3s !important;
+
+            margin: 0 !important;
+
+            &:hover {
+                background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) !important;
+            }
         }
 
 
