--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -6,17 +6,11 @@
 }
 
 .appbar {
-    background-color: #080b16 !important;
+    background-color: transparent !important;
     box-shadow: none !important;
 
     border: 1px solid rgba(0, 0, 0, 0.12) !important;
 
-    @media (min-width: 150px) and (max-width: 800px) {
-        & {
-            bottom: 0 !important;
-            top: auto !important;
-        }
-    }
 
     .sologo {
         justify-content: center !important;
@@ -25,6 +19,10 @@
     &>* {
         display: flex !important;
         justify-content: space-between !important;
+
+        background: #34396a !important;
+        border-radius: 4px;
+        margin: 2% 3%;
 
         a {
             display: flex;
