--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -8,8 +8,7 @@
 .appbar {
     background-color: transparent !important;
     box-shadow: none !important;
-
-    border: 1px solid rgba(0, 0, 0, 0.12) !important;
+    border: none !important;
 
 
     .sologo {
