--- a/src/components/UI/ProfileCard/ProfileCard.module.scss
+++ b/src/components/UI/ProfileCard/ProfileCard.module.scss
@@ -12,6 +12,8 @@
 
     background-color: #1a1e2d;
 
+    margin: 2% 3% !important;
+
     transition: 0.3s all !important;
 
     @media (min-width: 801px) and (max-width: 1200px) {
@@ -25,7 +27,7 @@
     @media (min-width: 150px) and (max-width: 800px) {
         & {
             flex-direction: column;
-            width: 65%;
+            width: 80%;
         }
 
     }
@@ -53,6 +55,13 @@
             padding: 15px 30px !important;
             // background-color: #7066e0 !important;
             background-color: #34396a !important;
+
+            @media (min-width: 150px) and (max-width: 800px) {
+                & {
+                    width: 100%;
+                }
+
+            }
 
             &:hover {
                 background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) !important;
